try to fix start menu position on small screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -61,8 +61,9 @@ html {
   overflow-y: auto; /* at least dont hide stuff on mobile */
   overflow-x: hidden;
 }
-.window-container::-webkit-scrollbar-track:vertical {
-  /* fix weird scrollbar bug on mobile chrome, maybe only on my phone :shrug: */
+.window-container::-webkit-scrollbar-track:vertical,
+#spotlight-results::-webkit-scrollbar-track:vertical {
+  /* fix weird scrollbar bug on mobile chrome, maybe only on my phone 🤷‍♂️ */
   margin-top: -17px;
   margin-bottom: -17px;
 }
@@ -299,9 +300,9 @@ html {
 
 .start-menu {
   display: none;
-  position: absolute;
+  position: fixed;
   left: 0;
-  bottom: 0;
+  bottom: 45px;
   width: 480px;
   max-width: 100vw;
   min-height: 480px;
